[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name="backend"
path = "rust-src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.6.18"
tower-http = { version = "0.3.0", features = ["cors"] }
